<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">News App</string>

    <!-- Default text to show with the news location ("Near the Pacific-Antarctic Ridge")
         if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->

    <!-- Text to display in the list when there are no news [CHAR LIMIT=NONE] -->
    <string name="no_news">No News found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_page_label">Page</string>
    <string name="settings_page_key" translatable="false">Article max</string>
    <string name="settings_page_default" translatable="false">10</string>

    <string name="settings_interest_label">Your Interest</string>
    <string name="settings_interest_key" translatable="false">What are you interested in?</string>
    <string name="settings_interest_default" translatable="false">Greek</string>
    <string name="titleTest">Trump fires Tillerson: president swings axe after series of policy clashes</string>
    <string name="sectionTest">section</string>
    <string name="dateTest">Mar 17, 2018</string>
    <string name="authorTest">author</string>
    <string name="coverImageUrl">https://www.theguardian.com/</string>
    <string name="theguardiancover">theguardianCover</string>
    <string name="thumbnailimage">thumbnailImage</string>
    <string name="showfields">show-fields</string>
    <string name="thumbnail">thumbnail</string>
    <string name="pageSize">page-size</string>
    <string name="q">q</string>
    <string name="showTags">show-tags</string>
    <string name="contributor">contributor</string>
    <string name="apiKey">api-key</string>
    <string name="apiKeyDecrypt">8e35ea00-2f5f-4fc0-b7a0-6c262ed57ba6</string>
</resources>