<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item that displays an earthquake -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:paddingEnd="@dimen/size"
    android:paddingLeft="@dimen/size"
    android:paddingRight="@dimen/size"
    android:paddingStart="@dimen/size">

    <TextView
        android:id="@+id/title"
        tools:text="@string/titleTest"
        style="@style/titleStyle" />

    <TextView
        android:id="@+id/author"
        tools:text="@string/authorTest"
        style="@style/authorStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/section"
            tools:text="@string/sectionTest"
            style="@style/sectionStyle" />

        <ImageView
            android:id="@+id/thumbnail_image_card"
            style="@style/thumbnailStyle"
            android:contentDescription="@string/thumbnailimage" />

        <TextView
            android:id="@+id/date"
            tools:text="@string/dateTest"
            style="@style/dateStyle" />
    </LinearLayout>

</LinearLayout>